--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,11 +12,13 @@
 					last sign in <%= time_ago_in_words(@user.last_sign_in_at) %> ago
 				</small>
 			</div>
-			<div>
+			<div id='js-items'>
 				<%= render @user.items %>
 			</div>
+			<h4>Add an Item</h4>
 			<div>
-				<%= render 'items/form', item: Item.new, user: @user %>
+				<%= render partial: 'items/form', locals: {item: Item.new, user: @user } %>
+			</div>
 		</div>
 	</div>
 </div>
